lang/langParser.py
# Generated from lang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class langParser ( Parser ):

    grammarFileName = "lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'*'", "'/'", "'+'", "'-'", "'skip'", 
                     "'{'", "'}'", "'('", "')'", "'['", "']'", "'||'", "'while'", 
                     "'if'", "'else'", "';'", "':='", "'true'", "'false'", 
                     "'and'", "'or'", "'='", "'!='", "'>'", "'<'", "'>='", 
                     "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "SKIP_CMD", "LBRACE", "RBRACE", "LPAREN", 
                      "RPAREN", "LSQUARE", "RSQUARE", "NDETCH", "WHILE", 
                      "IF", "ELSE", "SEMICOLON", "ASSIGN", "TRUE", "FALSE", 
                      "AND", "OR", "EQ", "NEQ", "GT", "LT", "GE", "LE", 
                      "ID", "INT", "WS" ]

    RULE_prog = 0
    RULE_com = 1
    RULE_elseTail = 2
    RULE_exp = 3
    RULE_aExp = 4
    RULE_bExp = 5
    RULE_bExp_tail = 6

    ruleNames =  [ "prog", "com", "elseTail", "exp", "aExp", "bExp", "bExp_tail" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    SKIP_CMD=5
    LBRACE=6
    RBRACE=7
    LPAREN=8
    RPAREN=9
    LSQUARE=10
    RSQUARE=11
    NDETCH=12
    WHILE=13
    IF=14
    ELSE=15
    SEMICOLON=16
    ASSIGN=17
    TRUE=18
    FALSE=19
    AND=20
    OR=21
    EQ=22
    NEQ=23
    GT=24
    LT=25
    GE=26
    LE=27
    ID=28
    INT=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(langParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(langParser.RBRACE, 0)

        def EOF(self):
            return self.getToken(langParser.EOF, 0)

        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ComContext)
            else:
                return self.getTypedRuleContext(langParser.ComContext,i)


        def getRuleIndex(self):
            return langParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = langParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 14
            self.match(langParser.LBRACE)
            self.state = 18
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268460064) != 0):
                self.state = 15
                self.com()
                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 21
            self.match(langParser.RBRACE)
            self.state = 22
            self.match(langParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return langParser.RULE_com

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignmentContext(ComContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ComContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(langParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(langParser.ASSIGN, 0)
        def exp(self):
            return self.getTypedRuleContext(langParser.ExpContext,0)

        def SEMICOLON(self):
            return self.getToken(langParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)


    class SkipContext(ComContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ComContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SKIP_CMD(self):
            return self.getToken(langParser.SKIP_CMD, 0)
        def SEMICOLON(self):
            return self.getToken(langParser.SEMICOLON, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkip" ):
                listener.enterSkip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkip" ):
                listener.exitSkip(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkip" ):
                return visitor.visitSkip(self)
            else:
                return visitor.visitChildren(self)


    class WhileLoopContext(ComContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ComContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(langParser.WHILE, 0)
        def LPAREN(self):
            return self.getToken(langParser.LPAREN, 0)
        def bExp(self):
            return self.getTypedRuleContext(langParser.BExpContext,0)

        def RPAREN(self):
            return self.getToken(langParser.RPAREN, 0)
        def LBRACE(self):
            return self.getToken(langParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(langParser.RBRACE, 0)
        def SEMICOLON(self):
            return self.getToken(langParser.SEMICOLON, 0)
        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ComContext)
            else:
                return self.getTypedRuleContext(langParser.ComContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileLoop" ):
                listener.enterWhileLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileLoop" ):
                listener.exitWhileLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileLoop" ):
                return visitor.visitWhileLoop(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(ComContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ComContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(langParser.IF, 0)
        def LPAREN(self):
            return self.getToken(langParser.LPAREN, 0)
        def bExp(self):
            return self.getTypedRuleContext(langParser.BExpContext,0)

        def RPAREN(self):
            return self.getToken(langParser.RPAREN, 0)
        def LBRACE(self):
            return self.getToken(langParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(langParser.RBRACE, 0)
        def elseTail(self):
            return self.getTypedRuleContext(langParser.ElseTailContext,0)

        def SEMICOLON(self):
            return self.getToken(langParser.SEMICOLON, 0)
        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ComContext)
            else:
                return self.getTypedRuleContext(langParser.ComContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)



    def com(self):

        localctx = langParser.ComContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_com)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [28]:
                localctx = langParser.AssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.match(langParser.ID)
                self.state = 25
                self.match(langParser.ASSIGN)
                self.state = 26
                self.exp()
                self.state = 27
                self.match(langParser.SEMICOLON)
                pass
            elif token in [5]:
                localctx = langParser.SkipContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.match(langParser.SKIP_CMD)
                self.state = 30
                self.match(langParser.SEMICOLON)
                pass
            elif token in [14]:
                localctx = langParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 31
                self.match(langParser.IF)
                self.state = 32
                self.match(langParser.LPAREN)
                self.state = 33
                self.bExp()
                self.state = 34
                self.match(langParser.RPAREN)
                self.state = 35
                self.match(langParser.LBRACE)
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268460064) != 0):
                    self.state = 36
                    self.com()
                    self.state = 41
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 42
                self.match(langParser.RBRACE)
                self.state = 43
                self.elseTail()
                self.state = 44
                self.match(langParser.SEMICOLON)
                pass
            elif token in [13]:
                localctx = langParser.WhileLoopContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 46
                self.match(langParser.WHILE)
                self.state = 47
                self.match(langParser.LPAREN)
                self.state = 48
                self.bExp()
                self.state = 49
                self.match(langParser.RPAREN)
                self.state = 50
                self.match(langParser.LBRACE)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268460064) != 0):
                    self.state = 51
                    self.com()
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 57
                self.match(langParser.RBRACE)
                self.state = 58
                self.match(langParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseTailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return langParser.RULE_elseTail

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfElseTailEmptyContext(ElseTailContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ElseTailContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseTailEmpty" ):
                listener.enterIfElseTailEmpty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseTailEmpty" ):
                listener.exitIfElseTailEmpty(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseTailEmpty" ):
                return visitor.visitIfElseTailEmpty(self)
            else:
                return visitor.visitChildren(self)


    class IfElseIfTailContext(ElseTailContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ElseTailContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ELSE(self):
            return self.getToken(langParser.ELSE, 0)
        def IF(self):
            return self.getToken(langParser.IF, 0)
        def LPAREN(self):
            return self.getToken(langParser.LPAREN, 0)
        def bExp(self):
            return self.getTypedRuleContext(langParser.BExpContext,0)

        def RPAREN(self):
            return self.getToken(langParser.RPAREN, 0)
        def LBRACE(self):
            return self.getToken(langParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(langParser.RBRACE, 0)
        def elseTail(self):
            return self.getTypedRuleContext(langParser.ElseTailContext,0)

        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ComContext)
            else:
                return self.getTypedRuleContext(langParser.ComContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseIfTail" ):
                listener.enterIfElseIfTail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseIfTail" ):
                listener.exitIfElseIfTail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseIfTail" ):
                return visitor.visitIfElseIfTail(self)
            else:
                return visitor.visitChildren(self)


    class IfElseTailContext(ElseTailContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.ElseTailContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ELSE(self):
            return self.getToken(langParser.ELSE, 0)
        def LBRACE(self):
            return self.getToken(langParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(langParser.RBRACE, 0)
        def com(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.ComContext)
            else:
                return self.getTypedRuleContext(langParser.ComContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseTail" ):
                listener.enterIfElseTail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseTail" ):
                listener.exitIfElseTail(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseTail" ):
                return visitor.visitIfElseTail(self)
            else:
                return visitor.visitChildren(self)



    def elseTail(self):

        localctx = langParser.ElseTailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_elseTail)
        self._la = 0 # Token type
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = langParser.IfElseTailContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.match(langParser.ELSE)
                self.state = 63
                self.match(langParser.LBRACE)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268460064) != 0):
                    self.state = 64
                    self.com()
                    self.state = 69
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 70
                self.match(langParser.RBRACE)
                pass

            elif la_ == 2:
                localctx = langParser.IfElseIfTailContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(langParser.ELSE)
                self.state = 72
                self.match(langParser.IF)
                self.state = 73
                self.match(langParser.LPAREN)
                self.state = 74
                self.bExp()
                self.state = 75
                self.match(langParser.RPAREN)
                self.state = 76
                self.match(langParser.LBRACE)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 268460064) != 0):
                    self.state = 77
                    self.com()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 83
                self.match(langParser.RBRACE)
                self.state = 84
                self.elseTail()
                pass

            elif la_ == 3:
                localctx = langParser.IfElseTailEmptyContext(self, localctx)
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def aExp(self):
            return self.getTypedRuleContext(langParser.AExpContext,0)


        def bExp(self):
            return self.getTypedRuleContext(langParser.BExpContext,0)


        def getRuleIndex(self):
            return langParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = langParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_exp)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.aExp(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.bExp()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return langParser.RULE_aExp

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class IntegerContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(langParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)


    class MultiplicationContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def aExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.AExpContext)
            else:
                return self.getTypedRuleContext(langParser.AExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplication" ):
                listener.enterMultiplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplication" ):
                listener.exitMultiplication(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplication" ):
                return visitor.visitMultiplication(self)
            else:
                return visitor.visitChildren(self)


    class AdditionContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def aExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.AExpContext)
            else:
                return self.getTypedRuleContext(langParser.AExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddition" ):
                listener.enterAddition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddition" ):
                listener.exitAddition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddition" ):
                return visitor.visitAddition(self)
            else:
                return visitor.visitChildren(self)


    class SubtractionContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def aExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.AExpContext)
            else:
                return self.getTypedRuleContext(langParser.AExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubtraction" ):
                listener.enterSubtraction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubtraction" ):
                listener.exitSubtraction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubtraction" ):
                return visitor.visitSubtraction(self)
            else:
                return visitor.visitChildren(self)


    class ArithmeticVariableContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(langParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArithmeticVariable" ):
                listener.enterArithmeticVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArithmeticVariable" ):
                listener.exitArithmeticVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmeticVariable" ):
                return visitor.visitArithmeticVariable(self)
            else:
                return visitor.visitChildren(self)


    class AParenthesisContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(langParser.LPAREN, 0)
        def aExp(self):
            return self.getTypedRuleContext(langParser.AExpContext,0)

        def RPAREN(self):
            return self.getToken(langParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAParenthesis" ):
                listener.enterAParenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAParenthesis" ):
                listener.exitAParenthesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAParenthesis" ):
                return visitor.visitAParenthesis(self)
            else:
                return visitor.visitChildren(self)


    class DivisionContext(AExpContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a langParser.AExpContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def aExp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(langParser.AExpContext)
            else:
                return self.getTypedRuleContext(langParser.AExpContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivision" ):
                listener.enterDivision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivision" ):
                listener.exitDivision(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDivision" ):
                return visitor.visitDivision(self)
            else:
                return visitor.visitChildren(self)



    def aExp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = langParser.AExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_aExp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                localctx = langParser.AParenthesisContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 94
                self.match(langParser.LPAREN)
                self.state = 95
                self.aExp(0)
                self.state = 96
                self.match(langParser.RPAREN)
                pass
            elif token in [29]:
                localctx = langParser.IntegerContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 98
                self.match(langParser.INT)
                pass
            elif token in [28]:
                localctx = langParser.ArithmeticVariableContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 99
                self.match(langParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 114
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = langParser.MultiplicationContext(self, langParser.AExpContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_aExp)
                        self.state = 102
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 103
                        self.match(langParser.T__0)
                        self.state = 104
                        self.aExp(8)
                        pass

                    elif la_ == 2:
                        localctx = langParser.DivisionContext(self, langParser.AExpContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_aExp)
                        self.state = 105
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 106
                        self.match(langParser.T__1)
                        self.state = 107
                        self.aExp(7)
                        pass

                    elif la_ == 3:
                        localctx = langParser.AdditionContext(self, langParser.AExpContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_aExp)
                        self.state = 108
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 109
                        self.match(langParser.T__2)
                        self.state = 110
                        self.aExp(6)
                        pass

                    elif la_ == 4:
                        localctx = langParser.SubtractionContext(self, langParser.AExpContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_aExp)
                        self.state = 111
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 112
                        self.match(langParser.T__3)
                        self.state = 113
                        self.aExp(5)
                        pass

             
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class BExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(langParser.ID, 0)

        def bExp_tail(self):
            return self.getTypedRuleContext(langParser.BExp_tailContext,0)


        def TRUE(self):
            return self.getToken(langParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(langParser.FALSE, 0)

        def aExp(self):
            return self.getTypedRuleContext(langParser.AExpContext,0)


        def LPAREN(self):
            return self.getToken(langParser.LPAREN, 0)

        def bExp(self):
            return self.getTypedRuleContext(langParser.BExpContext,0)


        def RPAREN(self):
            return self.getToken(langParser.RPAREN, 0)

        def getRuleIndex(self):
            return langParser.RULE_bExp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBExp" ):
                listener.enterBExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBExp" ):
                listener.exitBExp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBExp" ):
                return visitor.visitBExp(self)
            else:
                return visitor.visitChildren(self)




    def bExp(self):

        localctx = langParser.BExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bExp)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(langParser.ID)
                self.state = 121
                self.bExp_tail()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 122
                self.match(langParser.TRUE)
                self.state = 123
                self.bExp_tail()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.match(langParser.FALSE)
                self.state = 125
                self.bExp_tail()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 126
                self.aExp(0)
                self.state = 127
                self.bExp_tail()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 129
                self.match(langParser.LPAREN)
                self.state = 130
                self.bExp()
                self.state = 131
                self.match(langParser.RPAREN)
                self.state = 132
                self.bExp_tail()
                pass

